[package]
name = "with-baby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version="1.4.8", features=["postgres"]}
thiserror = "1.0.31"
rand = "0.8.5"
sha2 = "0.10.2"
hex = "0.4.3"
actix-web = "4.0.1"