[package]
name = "with-baby"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version="1.4.8", features=["postgres", "r2d2", "chrono"]}
thiserror = "1.0.31"
rand = "0.8.5"
sha2 = "0.10.2"
hex = "0.4.3"
actix-web = { version = "4.0.1"}
r2d2 = "0.8.9"
anyhow = "1.0.57"
chrono = { version = "0.4.19", features = ["serde"] }
serde = { version = "1.0.137", features = ["derive"] }
jsonwebtoken = "8.1.0"
futures-util = "0.3.21"
env_logger = "0.9.0"
dotenv = "0.15.0"